Started psuedo coding

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
 h1 {
-    color: aqua;
+    text-align: center;
+    font-size: 60px;
+}
+hr {
+    border: 5px solid black;
+}
+#gameboard {
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    gap: 16px; 
+    justify-content: center;
+    align-items: center;
+   
 }
