--- a/styles.css
+++ b/styles.css
@@ -23,4 +23,12 @@ hr {
     border: none;
     margin-top: 100px;
 }
-
+strong { 
+    font-size: 50px;
+}
+h2 {
+    text-align: center;
+}
+.player2message {
+    display: none;
+}
