--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,30 @@
 body {
-    background-image: url('./images/download.jpg');
-    background-size: contain;
+    background-image: url('./images/download-1.jpg');
+   background-repeat: no-repeat;
+   background-size: cover;
 }
 h1 {
     text-align: center;
     font-size: 60px;
+    color: white;
+    color: greenyellow;
+    background-color: black;
+    border: 10px solid black;
+    width: 500px;
+    margin: 0 auto;
+}
+h2 {
+    color: white;
 }
 hr {
-    width: 50%;
+    width: 75%;
     border: 5px solid black;
     height: 10px;
-    background-color: black;
+    background-color: white;
 }
 .tiles {
     border: 5px solid black;
+    background-color: white;
     height: 110px;
     width: 110px;
     font-size: 100px;
@@ -35,8 +46,12 @@ strong {
 h2 {
     text-align: center;
 }
+.player1message {
+    text-align: center;
+}
 .player2message {
     display: none;
+    text-align: center;
 }
 button {
     font-size: 70px;
@@ -60,7 +75,20 @@ button {
 }
 .player2winmessage, .player1winmessage{
     display: none;
+    text-align: center;
 }
 .draw {
     display: none;
+    text-align: center;
+}
+#play { 
+    display: block;
+}
+#messages{
+    border: 2px solid black;
+    background-color: dimgray;
+    width: 400px;
+    margin: 0 auto;
+    margin-top: 120px;
+   
 }
